--- a/report/TestReport.html
+++ b/report/TestReport.html
@@ -54,7 +54,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Nov 9, 2024 10:31:29 AM</span>
+			<span class='label blue darken-3 suite-start-time'>Nov 9, 2024 02:03:50 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -69,8 +69,8 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
-					<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
+										<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
+					<li status='warning'><a href='#!'>Warning <i class='material-icons orange-text'>warning</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -123,7 +123,7 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='50%'><span class='strong'>1</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='50%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
@@ -147,14 +147,14 @@
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'><b><b>Home Page Visualization</b></b></span>
-						<span class='test-time'>Nov 9, 2024 10:31:30 AM</span>
+						<span class='test-time'>Nov 9, 2024 02:03:50 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 9, 2024 10:31:30 AM</span>
-	<span class='label end-time'>Nov 9, 2024 10:31:33 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+486ms</span>
+	<span class='label start-time'>Nov 9, 2024 02:03:50 PM</span>
+	<span class='label end-time'>Nov 9, 2024 02:03:52 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+539ms</span>
 </div>
 <div class='test-desc'><pre><center><b>* * * * * * * *    I N F O R M A T I O N    * * * * * * * *</b></center><p align=justify>The purpose of this test is to verify that home page is displayed properly.<br><br><br>* * *  STEPS DESCRIPTION  * * *</b><br><br>[1] Open Home page.<br>[2] Accept cookie dialog.<br>[3] Take page screenshot.<br>[4] Compare actual page screenshot with expected one.</p></pre> </div>
 <div class='test-attributes'>
@@ -174,9 +174,9 @@
 		<tbody>
 			<tr class='log' status='fail'>
 				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>10:31:33 AM</td>
+				<td class='timestamp'>2:03:52 PM</td>
 				<td class='step-details'>
-						<pre><br>Actual image from the test can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Actual\HomePage_Actual.png'>here</a></b><br><br>Expected image from the test data can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Expected\HomePage_Expected.png'>here</a></b><br><br>Calculated image difference in percentage is <b>9.5457763671875%</b><br><br><center><b>* * * * * * * *    Image Comparison Result    * * * * * * * *</b></center><br>
+						<pre><br>Actual image from the test can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Actual\HomePage_Actual.png'>here</a></b><br><br>Expected image from the test data can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Expected\HomePage_Expected.png'>here</a></b><br><br>Calculated image difference in percentage is <b>14.091971397399902%</b><br><br><center><b>* * * * * * * *    Image Comparison Result    * * * * * * * *</b></center><br>
 					<img class='r-img' onerror='this.style.display="none"' data-featherlight='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Result\HomePage.png' src='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Result\HomePage.png'>
 				</td>
 			</tr>
@@ -185,17 +185,17 @@
 </div>
 					</div>
 				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
+				<li class='test displayed active  warning' status='warning' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'><b><b>User login with valid credentials</b></b></span>
-						<span class='test-time'>Nov 9, 2024 10:31:33 AM</span>
-						<span class='test-status right pass'>pass</span>
+						<span class='test-time'>Nov 9, 2024 02:03:52 PM</span>
+						<span class='test-status right warning'>warning</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 9, 2024 10:31:33 AM</span>
-	<span class='label end-time'>Nov 9, 2024 10:31:45 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 12s+463ms</span>
+	<span class='label start-time'>Nov 9, 2024 02:03:52 PM</span>
+	<span class='label end-time'>Nov 9, 2024 02:04:05 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 12s+271ms</span>
 </div>
 <div class='test-desc'><pre><center><b>* * * * * * * *    I N F O R M A T I O N    * * * * * * * *</b></center><p align=justify>The purpose of this test is to verify that login page is displayed properly and the functionality is working as expected.<br>[1] Open Home page.<br>[2] Accept cookie dialog.<br>[3] Click on Login button in header menu.<br>[4] Wait for login page and take screenshot.<br>[5] Enter user credentials and click Login button.</p></pre> </div>
 <div class='test-attributes'>
@@ -213,11 +213,11 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class='log' status='pass'>
-				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>10:31:45 AM</td>
+			<tr class='log' status='warning'>
+				<td class='status warning' title='warning' alt='warning'><i class='material-icons'>warning</i></td>
+				<td class='timestamp'>2:04:05 PM</td>
 				<td class='step-details'>
-						<pre><br>Actual image from the test can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Actual\LoginPage_Actual.png'>here</a></b><br><br>Expected image from the test data can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Expected\LoginPage_Expected.png'>here</a></b><br><br>Calculated image difference in percentage is <b>0.0%</b><br><br><center><b>* * * * * * * *    Image Comparison Result    * * * * * * * *</b></center><br>
+						<pre><br>Actual image from the test can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Actual\LoginPage_Actual.png'>here</a></b><br><br>Expected image from the test data can be found <b><a href='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Expected\LoginPage_Expected.png'>here</a></b><br><br>Calculated image difference in percentage is <b>1.6435134410858154%</b><br><br><center><b>* * * * * * * *    Image Comparison Result    * * * * * * * *</b></center><br>
 					<img class='r-img' onerror='this.style.display="none"' data-featherlight='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Result\LoginPage.png' src='G:\Projects\CredissimoAutomationTestLab\report\Screenshots\Result\LoginPage.png'>
 				</td>
 			</tr>
@@ -268,13 +268,12 @@
 					<div class='category-heading'>
 						<span class='category-name'>Frontend</span>
 						<span class='category-status right'>
-						<span class='label pass'>1</span>
 						<span class='label fail'>1</span>
 						</span>
 					</div>
 					<div class='category-content hide'>
 						<div class='category-status-counts'>
-							<span status="pass" class='label green accent-4 white-text'>Passed: 1</span>
+							
 							<span status="fail" class='label red lighten-1 white-text'>Failed: 1</span>
 							
 						</div>
@@ -289,14 +288,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Nov 9, 2024 10:31:30 AM</td>
+										<td>Nov 9, 2024 02:03:50 PM</td>
 										<td class='linked' test-id='1'><b><b>Home Page Visualization</b></b></td>
 										<td><span class='test-status fail'>fail</span></td>
 									</tr>
 									<tr>
-										<td>Nov 9, 2024 10:31:33 AM</td>
+										<td>Nov 9, 2024 02:03:52 PM</td>
 										<td class='linked' test-id='2'><b><b>User login with valid credentials</b></b></td>
-										<td><span class='test-status pass'>pass</span></td>
+										<td><span class='test-status warning'>warning</span></td>
 									</tr>
 								</tbody>
 							</table>
@@ -332,19 +331,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Nov 9, 2024 10:31:29 AM</div>
+					<div class='panel-lead'>Nov 9, 2024 02:03:50 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Nov 9, 2024 10:31:47 AM</div>
+			 		<div class='panel-lead'>Nov 9, 2024 02:04:06 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 17s+819ms</div>
+					<div class='panel-lead'>0h 0m 16s+718ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -393,11 +392,11 @@
 						</tr>
 						<tr>
 							<td>Frontend</td>
-							<td>1</td>
+							<td>0</td>
 							<td>1</td>
 							<td>0</td>
 							<td>
-									50%
+									0%
 							</td>
 						</tr>
 					</table>
@@ -412,13 +411,13 @@
 		<script>
 			var statusGroup = {
                 parentCount: 2,
-				passParent: 1,
+				passParent: 0,
 				failParent: 1,
 				fatalParent: 0,
 				errorParent: 0,
-				warningParent: 0,
+				warningParent: 1,
 				skipParent: 0,
-				exceptionsParent: 1,
+				exceptionsParent: 2,
 				childCount: 0,
 				passChild: 0,
 				failChild: 0,
@@ -443,7 +442,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "<b><b>Home Page Visualization</b></b>":3.486,"<b><b>User login with valid credentials</b></b>":12.463
+			        "<b><b>Home Page Visualization</b></b>":2.539,"<b><b>User login with valid credentials</b></b>":12.271
 			};
 		</script>
 	
